2010-03-26  nineties <nineties48@gmail.com>

	* added README

2010-03-25  nineties <nineties48@gmail.com>

	* restart writing this ChangeLog
	* rlc1: implemented system call

2010-01-18  nineties  <nineties48@gmail.com>

	* implemented rlc1/parse.rl
	* implemented rlc1/lexer.rl
	* added rowl.bnf

2010-01-17  nineties  <nineties48@gmail.com>

	* changed syntax of comment block to (% ... %)
	* implemented I/O channels
	* added lib/vim/*
	* implemented hashtable, hashset and hashmap
	* implemented indirect goto into rlc0

2010-01-16  nineties  <nineties48@gmail.com>

	* added rowllib.rl, lex.rl, node.rl and token.rl
	* implemented indirect function call to rlc0

2010-01-15  nineties  <nineties48@gmail.com>

	* added addressof expression
	* renamed "growl" to "rowl"
	* implemented negative integer literal

2010-01-14  nineties  <nineties48@gmail.com>

	* implemented wch() and rch.
	* implemented array declaration by type.
		- int [n], and char [n]
	* added "=>" (.equ) statement
	* refined coded related to string literal.
	* implemented expressions
		- prefix
		- multiplicative
		- additive
		- relational
		- equality
		- and, xor, or
	* implemented if, if-else and while statement
	* added a 'allocate' statement
	* fixed bug related to function call expression
	* divided glc0/compile.s to glc0/compile.s and glc0/codegen.s
	* refactored glc0

2010-01-13  nineties  <nineties48@gmail.com>

	* designed complete syntax of growl

2009-12-29  nineties  <nineties48@gmail.com>

	* first commit