@@ -1,0 +1,10 @@
+(%
+ % rowl - generation 1
+ % Copyright (C) 2010 nineties
+ %
+ % $Id: regalloc.rl 2010-03-26 02:56:21 nineties $
+ %);
+
+(% Register allocation %);
+
+include(stddef, code);
